--- a/.github/workflows/CiCD.yml
+++ b/.github/workflows/CiCD.yml
@@ -18,6 +18,12 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+      - name: Install Maven (Ubuntu)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y maven
+          mvn -v
+
       - name: Build with Maven
         run: mvn -B package
 
