--- a/.github/workflows/CiCD.yml
+++ b/.github/workflows/CiCD.yml
@@ -86,6 +86,28 @@ jobs:
         run: sudo docker push maestrodomb/boardgame:latest
 
       # --- Deploy ---
+            # --- AWS for EKS auth (fixes 'exec: aws not found') ---
+      - name: Install AWS CLI v2
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y unzip
+          curl -fsSL https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip -o awscliv2.zip
+          unzip -q awscliv2.zip
+          sudo ./aws/install --update
+          aws --version
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-1
+
+      - name: Verify caller
+        run: aws sts get-caller-identity
+
+
+      
       - name: Kubectl Action
         uses: tale/kubectl-action@v1
         with:
