--- a/deployment-service.yaml
+++ b/deployment-service.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: boardgame
-          image: AbhimanyuDomb/boardgame # Image that will be used to containers in the cluster
+          image: maestrodomb/boardgame # Image that will be used to containers in the cluster
           imagePullPolicy: Always
           ports:
             - containerPort: 8080 # The port that the container is running on in the cluster
